correct mis-alignment

--- a/src/component/Contactt.css
+++ b/src/component/Contactt.css
@@ -33,6 +33,52 @@
     display: flex;
     flex-direction: column;
   }
+  .contactForm {
+    width: 45%;
+    padding: 40px;
+    background: #fff;
+  }
+  .contactForm h2 {
+    font-size: 30px;
+    color: #333;
+    font-weight: 500!important;
+  }
+
+  .contactForm .inputBox {
+    position: relative;
+    width: 100%;
+    margin-top: 10px;
+  }
+  .contactForm .inputBox input,
+.contactForm .inputBox textarea {
+  width: 100%;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0;
+  border: none;
+  border-bottom: 2px solid #333;
+  outline: none;
+  resize: none;
+}
+.contactForm .inputBox span {
+  position: absolute;
+  left: 0;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0;
+  pointer-events: none;
+  transition: 0.5s;
+  color: #666;
+}
+.contactForm .inputBox input[type="submit"] {
+  width: 100px;
+  background:  #8C30F5;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  font-size: 18px;
+}
   @media (max-width: 991px) {
     .contact {
       padding: 20px;
